# charm

./: LICENSE  README  TODO  arm-dis.c  arm.hs  charm.cabal  symbolic.hs
Architecture/ARM/: ARM.hs  Common.hs  Generate.hs  Instructions.hs  Pretty.hs  Semantics.hs
src/Architecture/: ARM.hs
src/Architecture/ARM/: ARM.hs  Common.hs  Decoder.hs  Opcodes.hs  Pretty.hs  Semantics.hs  State.hs  Thumb.hs
src/Architecture/ARM/Decoder/: ARM.hs  Common.hs  Coprocessor.hs  Iteratee.hs  NEON.hs  Thumb.hs  Thumb2.hs  Thumb32.hs
src/Architecture/ARM/Instructions/: NEON.hs  Semantics.hs  UAL.hs  VFP.hs
src/Architecture/ARM/Instructions/NEON/: Semantics.hs
src/Architecture/ARM/Instructions/UAL/: Semantics.hs
src/Architecture/ARM/Instructions/VFP/: Semantics.hs
tests/: Main.hs  Objdump.hs  test.raw  test.s
