Name:                charm
Cabal-version:       >=1.2
Version:             0.0.1
Synopsis:            A reasonably complete (eventually) implementation of the ARM specification
Homepage:            http://github.com/pumpkin/charm
License:             BSD3
License-file:        LICENSE
Author:              Daniel Peebles
Maintainer:          Daniel Peebles <pumpkingod@gmail.com>
Category:            Architecture
Build-type:          Simple
-- Extra-source-files:  

Library
  -- Modules exported by the library.
  Exposed-modules:     Architecture.ARM, 
                       Architecture.ARM.Common, 
                       Architecture.ARM.Generate, 
                       Architecture.ARM.Pretty, 
                       Architecture.ARM.Semantics, 
                       Architecture.ARM.Decoder.ARM, 
                       Architecture.ARM.Decoder.Thumb, 
                       Architecture.ARM.Instructions.UAL, 
                       Architecture.ARM.Instructions.UAL.Semantics,
                       Architecture.ARM.Instructions.VFP, 
                       Architecture.ARM.Instructions.VFP.Semantics,
                       Architecture.ARM.Instructions.NEON, 
                       Architecture.ARM.Instructions.NEON.Semantics
  
  -- Packages needed in order to build this package.
  -- Build-depends:       
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  